--- a/example.css
+++ b/example.css
@@ -1,9 +1,4 @@
-/*
-Theme Name: themeName
-
-Description: Dedicated Wordpress theme for FunWorx
-
-*/
+/* css file  */
 
 @import url(http://fonts.googleapis.com/css?family=Open+Sans:400italic,600italic,900italic,400,600,900);
 
